; ModuleID = '/home/carl/AnghaBench/memcached/extr_itoa_ljust.c_itoa.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_itoa_ljust.c_itoa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32, i8*, i32, i32)* @itoa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @itoa(i32 %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %61 [
    i32 10, label %10
    i32 9, label %16
    i32 8, label %21
    i32 7, label %27
    i32 6, label %32
    i32 5, label %38
    i32 4, label %43
    i32 3, label %49
    i32 2, label %54
    i32 1, label %60
  ]

10:                                               ; preds = %4
  %11 = load i32, i32* %5, align 4
  %12 = sdiv i32 %11, 100000000
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i8*, i8** %6, align 8
  %15 = call i8* @out2(i32 %13, i8* %14)
  store i8* %15, i8** %6, align 8
  br label %16

16:                                               ; preds = %4, %10
  %17 = load i32, i32* %7, align 4
  %18 = mul nsw i32 %17, 100000000
  %19 = load i32, i32* %5, align 4
  %20 = sub nsw i32 %19, %18
  store i32 %20, i32* %5, align 4
  br label %21

21:                                               ; preds = %4, %16
  %22 = load i32, i32* %5, align 4
  %23 = sdiv i32 %22, 1000000
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = load i8*, i8** %6, align 8
  %26 = call i8* @out2(i32 %24, i8* %25)
  store i8* %26, i8** %6, align 8
  br label %27

27:                                               ; preds = %4, %21
  %28 = load i32, i32* %7, align 4
  %29 = mul nsw i32 %28, 1000000
  %30 = load i32, i32* %5, align 4
  %31 = sub nsw i32 %30, %29
  store i32 %31, i32* %5, align 4
  br label %32

32:                                               ; preds = %4, %27
  %33 = load i32, i32* %5, align 4
  %34 = sdiv i32 %33, 10000
  store i32 %34, i32* %7, align 4
  %35 = load i32, i32* %7, align 4
  %36 = load i8*, i8** %6, align 8
  %37 = call i8* @out2(i32 %35, i8* %36)
  store i8* %37, i8** %6, align 8
  br label %38

38:                                               ; preds = %4, %32
  %39 = load i32, i32* %7, align 4
  %40 = mul nsw i32 %39, 10000
  %41 = load i32, i32* %5, align 4
  %42 = sub nsw i32 %41, %40
  store i32 %42, i32* %5, align 4
  br label %43

43:                                               ; preds = %4, %38
  %44 = load i32, i32* %5, align 4
  %45 = sdiv i32 %44, 100
  store i32 %45, i32* %7, align 4
  %46 = load i32, i32* %7, align 4
  %47 = load i8*, i8** %6, align 8
  %48 = call i8* @out2(i32 %46, i8* %47)
  store i8* %48, i8** %6, align 8
  br label %49

49:                                               ; preds = %4, %43
  %50 = load i32, i32* %7, align 4
  %51 = mul nsw i32 %50, 100
  %52 = load i32, i32* %5, align 4
  %53 = sub nsw i32 %52, %51
  store i32 %53, i32* %5, align 4
  br label %54

54:                                               ; preds = %4, %49
  %55 = load i32, i32* %5, align 4
  %56 = sdiv i32 %55, 1
  store i32 %56, i32* %7, align 4
  %57 = load i32, i32* %7, align 4
  %58 = load i8*, i8** %6, align 8
  %59 = call i8* @out2(i32 %57, i8* %58)
  store i8* %59, i8** %6, align 8
  br label %60

60:                                               ; preds = %4, %54
  br label %61

61:                                               ; preds = %60, %4
  %62 = load i8*, i8** %6, align 8
  store i8 0, i8* %62, align 1
  %63 = load i8*, i8** %6, align 8
  ret i8* %63
}

declare dso_local i8* @out2(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
